# RS_with_CM

./: .gitignore  CMakeLists.txt  READEME.md
include/: GaloisField.h  ReedSolomon.h  cm256.h  gf256.h
src/: GaloisField.cpp  ReedSolomon.cpp  cm256.cpp  gf256.cpp  main.cpp
